<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="contact" type="com.example.phonebook.data.pojo.ContactView" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contactEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/contactEditPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45">

            <TableRow
                android:id="@+id/contactEditName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/contactEditNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/add_contact_form_name"
                    android:textColor="@android:color/black" />

                <EditText
                    android:hint="@string/contact_name_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="@={contact.contactViewName}" />
            </TableRow>

            <TableRow
                android:id="@+id/contactEditPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/contactEditPhoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/add_contact_form_phone"
                    android:textColor="#000000" />

                <EditText
                    android:hint="@string/contact_phone_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:text="@={contact.contactViewPhone}" />
            </TableRow>

            <TableRow
                android:id="@+id/contactEditEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/contactEditEmailText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/add_contact_form_email"
                    android:textColor="#000000" />

                <EditText
                    android:hint="@string/contact_email_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:text="@={contact.contactViewEmail}" />
            </TableRow>

            <TableRow
                android:id="@+id/contactEditAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/contactEditAddressText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/add_contact_form_address"
                    android:textColor="#000000" />

                <EditText
                    android:hint="@string/contact_address_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@={contact.contactViewAddress}" />

            </TableRow>

        </TableLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/contactEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/baseline_edit_white_48"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.94" />

        <TextView
            android:id="@+id/addContactText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/edit_contact_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/contactEditPanel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>