<?xml version="1.0" encoding="utf-8"?>
<layout>
        <data>
                <variable
                    name="user"
                    type="com.example.phonebook.model.data.User" />
                <variable
                    name="service"
                    type="com.example.phonebook.viewModels.LogInViewModel" />
        </data>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/loginForm"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            tools:context=".views.ui.fragments.LogInFragment">

                <ImageView
                    android:id="@+id/signInImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="40dp"
                    app:layout_constraintBottom_toTopOf="@+id/loginForm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/phonebook_main" />

                <TextView
                    android:id="@+id/loginFormLoginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_form_login_text"
                    android:textColor="@android:color/background_light" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@={user.login}"
                    android:textColor="@android:color/background_light"
                    android:textColorHighlight="@android:color/white"
                    android:textColorLink="@android:color/background_light"
                    android:textCursorDrawable="@drawable/edit_text_cursor"
                    app:backgroundTint="@android:color/white" />

                <TextView
                    android:id="@+id/loginFormPasswordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/login_form_password_text"
                    android:textColor="@android:color/background_light" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="@={user.password}"
                    android:textColor="@android:color/background_light"
                    android:textColorHighlight="@android:color/white"
                    android:textColorLink="@android:color/white"
                    android:textCursorDrawable="@drawable/edit_text_cursor"
                    android:imeOptions="actionDone"
                    app:backgroundTint="@android:color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="30dp"
                    android:onClick="@{() -> service.signIn()}"
                    android:text="@string/login_button_text" />

                <Button
                    android:id="@+id/toRegisterButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/sign_up_button_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:layout_gravity="center" />

        </LinearLayout>
</layout>